[package]
name = "day9a"
version = "0.1.0"
authors = ["Balazs Marjan <balazs.marjan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intcode"
path = "src/intcode.rs"

[[bin]]
name = "day9a"
path = "src/main.rs"

[dependencies]